Fix padding on mobile

--- a/css/custom.css
+++ b/css/custom.css
@@ -1,24 +1,7 @@
 /* Fix bottom nav bar on devices with bottom nav buttons */
 
-@media (orientation: portrait) {
-
-    .navbar.fixed-bottom, body {
-        padding-bottom: calc(env(safe-area-inset-bottom) + 40px);
-    }
-}
-
-@media (orientation: landscape) {
-
-    .navbar.fixed-bottom, body {
-        padding-bottom: calc(env(safe-area-inset-bottom) + 15px);
-    }
-}
-
-@media (display-mode: standalone) and (orientation: landscape) {
-    
-        .navbar.fixed-bottom {
-            border-top-left-radius: 0.375rem !important;
-            border-top-right-radius: 0.375rem !important;
-        }
-
+.navbar.fixed-bottom,
+body {
+    padding-bottom: calc((var(--bs-navbar-toggler-padding-y) * 2) + constant(safe-area-inset-bottom));
+    padding-bottom: calc((var(--bs-navbar-toggler-padding-y) * 2) + env(safe-area-inset-bottom));
 }
